plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.6'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'com.google.cloud.tools.jib' version '3.3.1'
    id 'com.github.shalousun.smart-doc' version "2.6.7"
}

group = 'cn.edu.zut'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '20'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

configurations.configureEach {
}

repositories {
    mavenCentral()
    maven {
        url "https://dl.google.com/dl/android/maven2/"
    }
}

ext {
    set('snippetsDir', file("build/generated-snippets"))
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-reactor-netty'
    implementation 'org.springframework.boot:spring-boot-starter-amqp'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-json'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-configuration-processor'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.0'
    implementation 'org.springframework.boot:spring-boot-starter-logging'
    implementation 'org.springframework.amqp:spring-rabbit:3.0.4'
    implementation 'org.springframework.boot:spring-boot-starter-integration'
    implementation 'org.springframework.integration:spring-integration-amqp:6.0.5'
    implementation 'org.springframework.integration:spring-integration-redis:6.0.5'
    implementation 'org.junit.jupiter:junit-jupiter:5.9.2'
    implementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'com.baomidou:mybatis-plus-boot-starter:3.5.3.1'
    implementation 'com.baomidou:mybatis-plus:3.5.3.1'
    implementation 'com.baomidou:mybatis-plus-extension:3.5.3.1'
    implementation 'org.jctools:jctools-core:4.0.1'
    implementation 'com.influxdb:influxdb-client-java:6.8.0'
    implementation 'com.influxdb:influxdb-spring:6.8.0'
    implementation 'org.springframework.boot:spring-boot-starter-rsocket'
    implementation 'io.cloudevents:cloudevents-spring:2.4.2'
    implementation 'io.cloudevents:cloudevents-json-jackson:2.4.2'
    implementation 'org.springframework.amqp:spring-rabbit-test:3.0.4'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
    implementation 'org.springframework.amqp:spring-rabbit-stream:3.0.4'
    implementation 'com.github.xiaoymin:knife4j-openapi3-webflux-jakarta-spring-boot-starter:4.1.0'
    implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.1.0'
    implementation 'com.github.xiaoymin:knife4j-openapi3-ui:4.1.0'
    implementation 'com.github.xiaoymin:knife4j-dependencies:4.1.0'
    implementation 'cn.dev33:sa-token-dao-redis-jackson:1.34.0'
    implementation 'org.apache.commons:commons-pool2'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
    implementation 'cn.dev33:sa-token-reactor-spring-boot3-starter:1.34.0'
    implementation 'cn.dev33:sa-token-spring-aop:1.34.0'
    implementation 'com.google.crypto.tink:tink:1.9.0'
    implementation 'org.bouncycastle:bcprov-jdk15to18:1.73'
    implementation 'cn.hutool:hutool-all:5.8.18'
    implementation 'org.mockito:mockito-core:5.3.1'
    implementation 'com.google.errorprone:error_prone_annotations:2.18.0'
    implementation 'org.bouncycastle:bcpkix-jdk15on:1.70'
    implementation 'org.springframework.security:spring-security-rsocket:6.0.3'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.security:spring-security-messaging:6.0.3'
    implementation 'org.springframework.security:spring-security-config:6.0.3'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.security:spring-security-oauth2-jose:6.0.3'
    implementation 'org.springframework.security:spring-security-oauth2-resource-server:6.0.3'
    implementation 'com.auth0:java-jwt:4.4.0'
    implementation 'io.micrometer:micrometer-tracing:1.0.4'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.mysql:mysql-connector-j:8.0.33'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test:3.5.5'
    testImplementation 'org.springframework.amqp:spring-rabbit-test'
    testImplementation 'org.springframework.integration:spring-integration-test:6.0.5'
}

tasks.named('test') {
    outputs.dir snippetsDir
    useJUnitPlatform()
}

smartdoc {
    configFile = file("src/main/resources/smart-doc.json")
    include 'io.micrometer:micrometer-tracing:1.0.4'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test).configureEach {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += '--enable-preview'
}
